--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blog-client",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -27,7 +28,9 @@
     "react-i18next": "^11.18.0",
     "react-icons": "^4.4.0",
     "react-image-upload": "^2.0.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-quill": "^1.3.5",
+    "react-simple-captcha": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
