--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -22,6 +22,8 @@
     "i18next": "^21.8.13",
     "i18next-browser-languagedetector": "^6.1.4",
     "next": "12.2.0",
+    "node-fetch": "2",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.0",
@@ -37,7 +39,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "eslint": "8.18.0",
+    "eslint": "^8.20.0",
     "eslint-config-next": "12.2.0",
     "typescript": "4.7.4"
   }
