--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@hookform/resolvers": "^2.9.3",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
     "axios": "^0.27.2",
     "crypto": "^1.0.1",
     "dotenv-safe": "^8.2.0",
@@ -41,6 +42,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "^8.20.0",
     "eslint-config-next": "12.2.0",
+    "eslint-plugin-react": "^7.30.1",
     "typescript": "4.7.4"
   }
 }
