--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .tsx, --ext .ts",
-    "lint-fix": "eslint --fix . --ext .tsx, --ext .ts"
+    "lint-fix": "eslint --fix . --ext .tsx, --ext .ts",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -41,10 +43,13 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@storybook/client-api": "^6.5.10",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/parser": "^5.31.0",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.0.1",
     "eslint-config-next": "12.2.0",
     "eslint-config-standard": "^17.0.0",
@@ -52,6 +57,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-storybook": "^0.6.3",
     "typescript": "4.7.4"
   }
 }
